--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -56,14 +56,14 @@ We can also associate a local interaction graph $G_A$ given by an adjacency matr
      \end{array}.
    \right.
 \end{equation}
-In general, the graph $G_A$ is a subgraph of $G_X$, however, for nearly all systems, $G_A$ is equivalent to $G_X$ (\refsupp{}). We define the connectivity to be equal to the number of edges in $G_A$, which is equivalent to summing up the number of non-zero entries of $\adj(G_A)$.
+In general, the graph $G_A$ is a subgraph of $G_X$, however, $G_A$ is almost always equivalent to $G_X$ (\refsupp{}). We define the connectivity to be equal to the number of edges in $G_A$, which is equivalent to summing up the number of non-zero entries of $\adj(G_A)$.
 These interaction graphs can be viewed as deriving from the combination of system components that accept a given pattern of inputs and produce a given pattern of outputs (\reffigexamplesystemmodules).
 
-The network architecture represented in terms of the adjacency matrix, \ref{eq:lininterdepadj}, can be abstracted into modules by mapping the interaction graph to the network of strongly connected components (SCCs, see \refsupp{} and \reffigscc). This map from the interaction graph of a network, referred to as $\hier$, has a collection of intrinsic symmetries shown in \reffighiertransformations. These three symmetries represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated \reffigscc. Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph.
+The network architecture represented in terms of the adjacency matrix, \ref{eq:lininterdepadj}, can be abstracted into modules by mapping the interaction graph to the network of strongly connected components (SCCs, see \refsupp{} and \reffigscc). This map from the interaction graph of a network to its SCCs, referred to as $\hier$ in \ref{fig:modsccsym}, has a collection of intrinsic symmetries shown in \reffighiertransformations{}. These three symmetries, \reffigscc{}, represent transformations that can be performed on the interaction graph that do not change the network of SCCs to which it is associated. Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph.
 
 In the process of biological evolution, the parameter values $\vec{p}$ or the form of the functions $F_i$ corresponding to all different types of networks considered in \ref{fig:biomodelexamples} are subject to, potentially drastic, modifications due, for example, to mutations or environmental fluctuations. These changes may alter the capacity of a given system to achieve a stable steady state. In order to evaluate this we consider a stochastic process whereby for a given dynamical system associated to a stable matrix $A$, we consider a perturbation of the system leading to $A'$ where $\adj(G_A) = \adj(G_{A'})$. This corresponds to a dynamical system whose connectivity is preserved, but where the underlying model is defined in terms of a different vector of parameters ${\vec{p}}\,'$ (\refsupp{}). We then ask, for each distinct network topology on $n$ components, what is the probability, given $A$ is a stable matrix, that $A'$ is also a stable matrix. This probability is what we refer to as dynamical robustness.
 
-We have derived an analytical expression for dynamical robustness, $R_{tot}$, of a network in terms of its interaction graph as a weighted average of the robustness of the SCCs, $R_i$, the corresponding number of links within each SCC, $d_i$, and the number of links between the SCCs, $l$. The entries of the Jacobian are sampled independently from a generic probability distribution. Examples of vector fields that may result from this sampling of Jacobian matrices are shown in \ref{fig:jacobianvectorfields}. The expression in \ref{eq:sccrobustness} holds for the case of simultaneously perturbing any number of elements of the Jacobian, but can be schematized for the case of perturbing a single element as \ref{eq:robschematic} (see \reffigscc$\,$ for examples demonstrating this expression)
+We have derived an analytical expression for dynamical robustness, $R_{tot}$, of a network in terms of its interaction graph as a weighted average of the robustness of the SCCs, $R_i$, the corresponding number of links within each SCC, $d_i$, and the number of links between the SCCs, $l$. The entries of the Jacobian are sampled independently from a generic probability distribution. Examples of vector fields that correspond to this sampling of Jacobian matrices are shown in \ref{fig:jacobianvectorfields}. The expression in \ref{eq:sccrobustness} holds for the case of simultaneously perturbing any number of elements of the Jacobian, but can be schematized for the case of perturbing a single element as \ref{eq:robschematic} (see \reffigscc$\,$ for examples demonstrating this expression)
 \begin{equation}\label{eq:robschematic}
 R_{tot} = \frac{l+d_1 R_1 + d_2 R_2 + \cdots}{l+d_1 + d_2 + \cdots}.
 \end{equation}
