--- a/paper.tex
+++ b/paper.tex
@@ -41,6 +41,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 \input{tex/introduction}
 
 \section{Results}
+\input{tex/overview}
 \input{tex/results}
 
 \section{Discussion}
