--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -1,5 +1,7 @@
 %!TEX root = ../paper.tex
 
+\subsection{overview}
+
 In the general case of a dynamical system with $n$ components, where the components may be concentrations of chemical species, genes, or biological species, we have an $n$-dimensional vector of state variables or observables $(x_1(t), \ldots x_n(t)) = \vec{x}(t)
 $
 whose components are solutions to the arbitrary first order system
