'Merge' figuressupp from 'science' branch

--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -2,6 +2,15 @@
 
 \begin{figure}[!ht]
 \centering
+\noindent\includegraphics[width=0.9\columnwidth]{fig/jacobianvectorfields.pdf}
+\caption{{\bf Vector fields resulting from the random sampling of two component systems.} System parameters of \ref{eq:arbitraryjacobianreactionnetwork} are rescaled to ensure the fixed point is located at $(1,1)$. The color of the dot located at the fixed point indicates whether it is stable (black) or unstable (gray).}
+\label{fig:jacobianvectorfields}
+\end{figure}
+
+\pagebreak
+
+\begin{figure}[!ht]
+\centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/robustnesssymmetries.pdf}
 \caption{{\bf Example symmetries of robustness.} In this example, the connected component sizes are fixed at $\{2,1,1\}$ with a total of $3$ links between them. Red arrows correspond to transformations like \reffighiertransformations a where SCCs are swapped whereas purple arrows correspond to transformations like \reffighiertransformations b where links are moved between nodes within a SCC. (A) shows all underlying graphs while (B) shows the number of nodes in each SCC and the number of links between the SCCs.}
 \label{fig:robustnesssymmetries}
@@ -17,6 +26,7 @@
 \end{figure}
 
 \pagebreak
+\FloatBarrier
 
 \begin{figure}[!ht]
 \centering
