uncomment inline figures

--- a/paper.tex
+++ b/paper.tex
@@ -65,7 +65,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 
 \beginsupplement
 \setcounter{secnumdepth}{4}
-\section{Supporting Information}
+\section{\refsupp{}}
 
 \input{tex/figuressupp}
 \pagebreak
